# Kanban

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  sample_data.sql  schema.sql
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/core/: config.py  csrf.py  deps.py  security.py
app/db/: init_db.py  session.py
app/models/: _all.py  base.py  board.py  column.py  entities.py  project.py  task.py  user.py
app/routers/: auth.py  boards.py  columns.py  logs.py  tasks.py  ui.py  users.py
app/routes/api/: columns.py  deps.py  projects.py  tasks.py
app/routes/web/: auth.py  htmx.py  pages.py
app/schemas/: api.py  column.py  common.py  project.py  task.py
app/services/: activity.py  board_service.py  cache.py  column_service.py  project_service.py  task_service.py  telegram.py  user_service.py
app/static/css/: app.css  font.css
app/static/js/: board.js  jalali_datepicker.js
app/templates/: base.html  board.html  dashboard.html
app/templates/auth/: layout.html  login.html  register.html
app/templates/partials/: board_columns.html  column_card.html  project_card.html  task_card.html
nginx/: default.conf
