[project]
name = "kanban-farsi-rtl"
version = "0.1.0"
description = "Minimal Kanban Project Management (Persian/RTL) with FastAPI + HTMX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.0",
  "pymysql>=1.1.0",
  "redis>=5.0.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.2.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt<4.0.0",
  "cryptography>=42.0.0",
  "itsdangerous>=2.2.0",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
